[gd_scene load_steps=6 format=3 uid="uid://w56utktu77a3"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_tpvmc"]
[ext_resource type="Texture2D" uid="uid://diq4otv27kgne" path="res://Assets/ui_panel.png" id="1_w3tdd"]
[ext_resource type="LabelSettings" uid="uid://c2tcbao51vfdi" path="res://Assets/fonts/main_menu_titles.tres" id="3_h5hu5"]
[ext_resource type="LabelSettings" uid="uid://cslmrudxnxwxm" path="res://Assets/fonts/label_theme.tres" id="4_c1t1k"]
[ext_resource type="Texture2D" uid="uid://dj5gd3e00rk7b" path="res://Scenes/button_basic.png" id="4_qbakf"]

[node name="UI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tpvmc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -95.0
offset_right = 86.5
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w3tdd")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Panel/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 10)
layout_mode = 2

[node name="pause_title" type="Label" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = ExtResource("3_h5hu5")
horizontal_alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="resume_button" type="TextureButton" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_qbakf")

[node name="resume_label" type="Label" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer/resume_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"
label_settings = ExtResource("4_c1t1k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart_button" type="TextureButton" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_qbakf")

[node name="restart_label" type="Label" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer/restart_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"
label_settings = ExtResource("4_c1t1k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 15)
layout_mode = 2

[node name="main_menu_button" type="TextureButton" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_qbakf")

[node name="main_menu_label" type="Label" parent="Panel/NinePatchRect/MarginContainer/VBoxContainer/main_menu_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN MENU"
label_settings = ExtResource("4_c1t1k")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/NinePatchRect/MarginContainer/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/MarginContainer/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/MarginContainer/VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
